# rsget

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  README.org  azura-template-win.yml  azure-pipelines.yml  azure-template-win.yml  azure-template.yml
.github/workflows/: ci.yml
detective/: main.org
detective/tiktok/: tiktok-video
detective/twitch/: m3u8_master_playlist
hls_test/: Cargo.toml
hls_test/src/: main.rs
rsget/: Cargo.toml
rsget/src/: main.rs
rsget_cli/: Cargo.toml
rsget_cli/src/: #main.rs#  .#main.rs  main.rs
rsget_hls/: Cargo.toml
rsget_hls/src/: lib.rs
rsget_lib/: Cargo.toml
rsget_lib/src/: lib.rs
rsget_lib/src/plugins/: afreeca.rs  bilibili.rs  dlive.rs  douyin.rs  douyu.rs  drdk.rs  huya.rs  inke.rs  mixer.rs  mod.rs  panda.rs  tiktok.rs  twitch.rs  vlive.rs  xingyan.rs  xingyan2.rs
rsget_lib/src/utils/: downloaders.rs  error.rs  mod.rs  sites.rs  stream.rs
stream_lib/: Cargo.toml  README.md
stream_lib/examples/: hls_download.rs
stream_lib/src/: download_stream.rs  error.rs  hls.rs  lib.rs  named_hls.rs  stream.rs
stream_lib/src/hls/: mod.rs  named_watch.rs  watch.rs
