[package]
name = "hls_test"
version = "0.2.0"
authors = ["Valdemar Erk <v@erk.io>"]

[dependencies]
rsget_hls = { path = "../rsget_hls" }
log = "0.4"
pretty_env_logger = "0.2"
tokio = "0.1"
futures = "0.1"
http = "0.1.0"
hyper = "0.12"#{ git = "https://github.com/hyperium/hyper" }
hyper-tls = "0.2"#{ git = "https://github.com/hyperium/hyper-tls" } #"0.1.3"
#rsget_lib = { path = "./../rsget_lib" }