[package]
name = "rsget"
version = "0.1.5"
authors = ["Valdemar Erk <valdemar@erk.io>"]
description = "Tool to get information about and download livestreams"
license = "ISC"
edition = "2021"
documentation = "https://docs.rs/rsget"
homepage = "https://github.com/Erk-/rsget"
repository = "https://github.com/Erk-/rsget/tree/master/rsget_cli"

[dependencies]
rsget_lib = { version = "0.3", path = "../rsget_lib" }
stream_lib = { version = "0.5", path = "../stream_lib" }
tracing = "0.1"
tracing-subscriber = "0.3.18"
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1", features = ["fs", "rt-multi-thread", "io-util", "io-std"] }
reqwest = { version = "0.12", default-features = false}
indicatif = "0.17.7"
futures-util = "0.3.30"

[features]
# Default to rustls so we don't pull in openssl
default = ["rustls-tls"]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-webpki-roots",
]
native-tls = [
  "reqwest/native-tls",
  "reqwest/rustls-tls-native-roots",
]

[[bin]]
name = "rsget"
path = "src/main.rs"
