[package]
name = "rsget_lib"
version = "0.3.0"
authors = ["Valdemar Erk <valdemar@erk.io>"]
description = "Library to get information about and download livestreams"
license = "ISC"
edition = "2021"
documentation = "https://docs.rs/rsget_lib"
homepage = "https://github.com/Erk-/rsget"
repository = "https://github.com/Erk-/rsget/tree/master/rsget_lib"

[dependencies]
tracing = "0.1"
serde = "^1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
regex = "1.10"
http = "0.2.11"
chrono = "0.4"
hls_m3u8 = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rand = { version ="0.8", features = ["small_rng"] }
async-trait = "0.1"
webbrowser = "0.8"

[dependencies.stream_lib]
default-features = false
version = "0.4.1"
path = "../stream_lib"
features = []
