[package]
name = "stream_lib"
version = "0.3.0"
authors = ["Valdemar Erk <v@erk.io>"]
description = "Tool to download differnt types of streams"
license = "ISC"
edition = "2021"
documentation = "https://docs.rs/stream_lib"
homepage = "https://github.com/Erk-/rsget"
repository = "https://github.com/Erk-/rsget/tree/master/stream_lib"

[dependencies]
hls_m3u8 = "0.4.1"
reqwest = { version = "0.11.12", features = ["stream"] }
tracing = "0.1.37"
url = "2.3.1"
futures-util = "0.3.25"
tokio = { version = "1.21.2", default-features = false, features = ["rt", "sync", "time"] }
patricia_tree = "0.3.2"

futures-core = "0.3.25"
bytes = "1.2.1"

[dev-dependencies]
tracing-subscriber = "0.3.1"
tokio = { version = "1.21.2", default-features = false, features = ["fs", "rt", "sync", "time", "macros"] }

[features]
default = []
