[package]
name = "stream_lib"
version = "0.3.0"
authors = ["Valdemar Erk <cargo@erk.dev>"]
description = "Tool to download differnt types of streams"
license = "ISC"
edition = "2021"
documentation = "https://docs.rs/stream_lib"
homepage = "https://github.com/Erk-/rsget"
repository = "https://github.com/Erk-/rsget/tree/master/stream_lib"

[dependencies]
hls_m3u8 = "0.4.1"
reqwest = { version = "0.11.23", features = ["stream"] }
tracing = "0.1.40"
url = "2.5.0"
futures-util = "0.3.30"
tokio = { version = "1.35.1", default-features = false, features = ["rt", "sync", "time"] }
patricia_tree = "0.8.0"
futures-core = "0.3.30"
bytes = "1.5.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
tokio = { version = "1.35.1", default-features = false, features = ["fs", "rt", "sync", "time", "macros"] }

[features]
default = []
