[package]
name = "stream_lib"
version = "0.4.1"
authors = ["Valdemar Erk <cargo@erk.dev>"]
description = "Tool to download differnt types of streams"
license = "ISC"
edition = "2021"
documentation = "https://docs.rs/stream_lib"
homepage = "https://github.com/Erk-/rsget"
repository = "https://github.com/Erk-/rsget/tree/master/stream_lib"

[dependencies]
hls_m3u8 = "0.4.1"
reqwest = { version = "0.11.22", default-features = false, features = ["stream"] }
tracing = "0.1.40"
url = "2.5.0"
futures-util = "0.3.30"
tokio = { version = "1.38.0", default-features = false, features = ["rt", "sync", "time"] }
patricia_tree = "0.8.0"
futures-core = "0.3.30"
bytes = "1.5.0"

[dev-dependencies]
tracing-subscriber = "0.3.18"
tokio = { version = "1.38", default-features = false, features = ["fs", "rt", "sync", "time", "macros"] }

[features]
# Default to rustls so we don't pull in openssl
default = ["rustls-tls"]
rustls-tls = [
  "reqwest/rustls-tls",
  "reqwest/rustls-tls-webpki-roots",
]
native-tls = [
  "reqwest/native-tls",
  "reqwest/rustls-tls-native-roots",
]